Update - Still working on UI

--- a/app/src/main/res/layout/activity_doctor_view_appointments_new.xml
+++ b/app/src/main/res/layout/activity_doctor_view_appointments_new.xml
@@ -10,7 +10,7 @@
     <View
         android:id="@+id/view47"
         android:layout_width="wrap_content"
-        android:layout_height="670dp"
+        android:layout_height="650dp"
         android:background="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -19,9 +19,20 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewDoctorAppointments"
         android:layout_width="match_parent"
-        android:layout_height="500dp"
-        android:layout_marginTop="16dp"
+        android:layout_height="650dp"
+        app:layout_constraintBottom_toBottomOf="@+id/view47"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView67"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="@string/appointment"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/view47" />
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
