--- a/app/src/main/res/layout/activity_patient_appointment_booking_new.xml
+++ b/app/src/main/res/layout/activity_patient_appointment_booking_new.xml
@@ -16,6 +16,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <View
+        android:id="@+id/divider29"
+        android:layout_width="340dp"
+        android:layout_height="5dp"
+        android:background="@drawable/rounded_square_new"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewUserName_new" />
+
     <Button
         android:id="@+id/button_Add_New_Appointment_New"
         android:layout_width="340dp"
@@ -65,4 +74,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/view41" />
+
+    <View
+        android:id="@+id/divider30"
+        android:layout_width="340dp"
+        android:layout_height="5dp"
+        android:background="@drawable/rounded_square_new"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/recyclerViewPatientAppointments" />
 </androidx.constraintlayout.widget.ConstraintLayout>
