--- a/app/src/main/res/layout/patient_appointments_recyclerview_layout.xml
+++ b/app/src/main/res/layout/patient_appointments_recyclerview_layout.xml
@@ -13,112 +13,77 @@
         <View
             android:id="@+id/view42"
             android:layout_width="match_parent"
-            android:layout_height="450dp"
-            android:background="@drawable/pop_up_appointments_background"
+            android:layout_height="520dp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
-            android:id="@+id/imageView39"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:background="@drawable/patient_new"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/view42" />
-
         <TextView
             android:id="@+id/textViewAppointmentDescriptionNew"
-            android:layout_width="200dp"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="-6dp"
+            android:background="@drawable/textview_background"
             android:hint="@string/descriptiontext"
-            android:paddingStart="4dp"
-            android:paddingTop="12dp"
+            android:padding="8dp"
             android:textAlignment="textStart"
             android:textColor="#BC000000"
-            android:textSize="17sp"
+            android:textSize="18sp"
             android:textStyle="normal"
-            app:layout_constraintStart_toEndOf="@+id/imageView39"
-            app:layout_constraintTop_toTopOf="@+id/view42" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView80" />
 
         <TextView
             android:id="@+id/textViewAppointmentDepartmentNew"
-            android:layout_width="200dp"
+            android:layout_width="300dp"
             android:layout_height="45dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="-6dp"
+            android:background="@drawable/textview_background"
             android:hint="@string/age"
-            android:paddingStart="4dp"
-            android:paddingTop="12dp"
+            android:padding="8dp"
             android:textAlignment="textStart"
             android:textColor="#BC000000"
-            android:textSize="17sp"
+            android:textSize="18sp"
             android:textStyle="normal"
-            app:layout_constraintStart_toEndOf="@+id/imageView39"
-            app:layout_constraintTop_toBottomOf="@+id/textViewAppointmentDescriptionNew" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView82" />
 
         <TextView
             android:id="@+id/textViewAppointmentDateNew"
-            android:layout_width="200dp"
+            android:layout_width="300dp"
             android:layout_height="45dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="-6dp"
+            android:background="@drawable/textview_background"
             android:hint="@string/timeavailableCAPS"
-            android:paddingStart="4dp"
-            android:paddingTop="12dp"
+            android:padding="8dp"
             android:textAlignment="textStart"
             android:textColor="#BC000000"
-            android:textSize="17sp"
+            android:textSize="18sp"
             android:textStyle="normal"
-            app:layout_constraintStart_toEndOf="@+id/imageView39"
-            app:layout_constraintTop_toBottomOf="@+id/textViewAppointmentDepartmentNew" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView84" />
 
         <TextView
             android:id="@+id/textViewAppointmentTimeNew"
-            android:layout_width="200dp"
+            android:layout_width="300dp"
             android:layout_height="45dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="-6dp"
+            android:background="@drawable/textview_background"
             android:hint="@string/dateCAPS"
-            android:paddingStart="4dp"
-            android:paddingTop="12dp"
+            android:padding="8dp"
+            android:paddingStart="5dp"
+            android:paddingEnd="5dp"
             android:textAlignment="textStart"
             android:textColor="#BC000000"
-            android:textSize="17sp"
+            android:textSize="18sp"
             android:textStyle="normal"
-            app:layout_constraintStart_toEndOf="@+id/imageView39"
-            app:layout_constraintTop_toBottomOf="@+id/textViewAppointmentDateNew" />
-
-        <View
-            android:id="@+id/divider29"
-            android:layout_width="200dp"
-            android:layout_height="4dp"
-            android:layout_marginStart="8dp"
-            android:background="?android:attr/listDivider"
-            app:layout_constraintStart_toEndOf="@+id/imageView39"
-            app:layout_constraintTop_toBottomOf="@+id/textViewAppointmentDescriptionNew" />
-
-        <View
-            android:id="@+id/divider30"
-            android:layout_width="200dp"
-            android:layout_height="4dp"
-            android:layout_marginStart="8dp"
-            android:background="?android:attr/listDivider"
-            app:layout_constraintStart_toEndOf="@+id/imageView39"
-            app:layout_constraintTop_toBottomOf="@+id/textViewAppointmentDepartmentNew" />
-
-        <View
-            android:id="@+id/divider31"
-            android:layout_width="200dp"
-            android:layout_height="4dp"
-            android:layout_marginStart="8dp"
-            android:background="?android:attr/listDivider"
-            app:layout_constraintStart_toEndOf="@+id/imageView39"
-            app:layout_constraintTop_toBottomOf="@+id/textViewAppointmentDateNew" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView89" />
 
         <TextView
             android:id="@+id/textView88"
@@ -136,85 +101,114 @@
             app:layout_constraintStart_toStartOf="@+id/view42"
             app:layout_constraintTop_toBottomOf="@+id/textViewAppointmentTimeNew" />
 
+        <View
+            android:id="@+id/view50"
+            android:layout_width="340dp"
+            android:layout_height="180dp"
+            android:background="#E1F5FE"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView88" />
+
         <TextView
             android:id="@+id/textViewDocName_APP"
-            android:layout_width="200dp"
+            android:layout_width="300dp"
             android:layout_height="45dp"
-            android:layout_marginStart="104dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/textview_background"
             android:hint="@string/pending"
             android:paddingStart="4dp"
             android:paddingTop="12dp"
-            android:textAlignment="textStart"
-            android:textColor="#BC000000"
-            android:textSize="19sp"
+            android:textAlignment="center"
+            android:textColor="#000000"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/view42"
             app:layout_constraintTop_toBottomOf="@+id/textView88" />
 
         <TextView
             android:id="@+id/textViewDocPhone_APP"
-            android:layout_width="200dp"
+            android:layout_width="300dp"
             android:layout_height="45dp"
-            android:layout_marginStart="104dp"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/textview_background"
             android:hint="@string/pending"
             android:paddingStart="4dp"
             android:paddingTop="12dp"
-            android:textAlignment="textStart"
-            android:textColor="#BC000000"
-            android:textSize="19sp"
+            android:textAlignment="center"
+            android:textColor="#000000"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textViewDocName_APP" />
 
         <TextView
             android:id="@+id/textViewDocEmail_APP"
-            android:layout_width="200dp"
+            android:layout_width="300dp"
             android:layout_height="45dp"
-            android:layout_marginStart="104dp"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/textview_background"
             android:hint="@string/pending"
             android:paddingStart="4dp"
             android:paddingTop="12dp"
-            android:textAlignment="textStart"
-            android:textColor="#BC000000"
-            android:textSize="19sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textViewDocPhone_APP" />
-
-        <View
-            android:id="@+id/divider32"
-            android:layout_width="200dp"
-            android:layout_height="4dp"
-            android:layout_marginStart="104dp"
-            android:background="?android:attr/listDivider"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textViewDocName_APP" />
-
-        <View
-            android:id="@+id/divider33"
-            android:layout_width="200dp"
-            android:layout_height="4dp"
-            android:layout_marginStart="104dp"
-            android:background="?android:attr/listDivider"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textViewDocPhone_APP" />
-
-        <View
-            android:id="@+id/divider34"
-            android:layout_width="340dp"
-            android:layout_height="5dp"
-            android:background="@drawable/rounded_square_new"
+            android:textAlignment="center"
+            android:textColor="#000000"
+            android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textViewDocPhone_APP" />
+
+        <TextView
+            android:id="@+id/textView80"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="24dp"
+            android:background="#FFFFFF"
+            android:paddingStart="5dp"
+            android:paddingEnd="5dp"
+            android:text="@string/descriptiontext"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/view42" />
 
-        <View
-            android:id="@+id/divider35"
-            android:layout_width="200dp"
-            android:layout_height="4dp"
-            android:layout_marginStart="104dp"
-            android:background="?android:attr/listDivider"
+        <TextView
+            android:id="@+id/textView82"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:background="#FFFFFF"
+            android:paddingStart="5dp"
+            android:paddingEnd="5dp"
+            android:text="@string/patients_age"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textViewDocEmail_APP" />
+            app:layout_constraintTop_toBottomOf="@+id/textViewAppointmentDescriptionNew" />
+
+        <TextView
+            android:id="@+id/textView84"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:background="#FFFFFF"
+            android:paddingStart="5dp"
+            android:paddingEnd="5dp"
+            android:text="@string/time_availability"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textViewAppointmentDepartmentNew" />
+
+        <TextView
+            android:id="@+id/textView89"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:background="#FFFFFF"
+            android:paddingStart="5dp"
+            android:paddingEnd="5dp"
+            android:text="@string/timeavailableCAPS"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textViewAppointmentDateNew" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
